--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -60,6 +60,7 @@
         <script src="~/scripts/bootstrap-datepicker.it.min.js"></script>
         <script src="~/scripts/knockout.js"></script>
         <script src="~/scripts/moment-with-locales.min.js"></script>
+        <script src="~/scripts/Bacon.min.js"></script>
         <script src="~/scripts/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
@@ -82,6 +83,9 @@
         </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.2/moment-with-locales.min.js"
             asp-fallback-src="~/scripts/moment-with-locales.min.js">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bacon.js/0.7.89/Bacon.min.js"
+            asp-fallback-src="~/scripts/Bacon.min.js">
         </script>
         <script src="~/scripts/site.min.js" asp-append-version="true"></script>
     </environment>
